@@ -1,10 +1,0 @@
-Makefile
-chain-e
-chain-p
-triangle-e
-triangle-p
-*.dat
-*.gp
-*.out
-*.run*
-*.xml
