@@ -1,2 +1,0 @@
-config.h
-stamp-h1
